fix css on navbar spacing for live

--- a/public/css/portfolio.css
+++ b/public/css/portfolio.css
@@ -7,7 +7,7 @@
   margin-top: 10px;
 }
 
-.nav-width {
+#nav-width {
     width: 900px;
     margin-right: auto;
     margin-left: auto;
